Added app logic

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,6 +2,7 @@
   .home__title
     Server for
     %a{href: '#', target: '_self'} Custom Input
+    %a{href: '/install', target: '_self'} Instalar en mi tienda
   .home__subtitle
     Developed by
     %a{href: 'https://ohzi.io', target: '_blank'} OHZI Interactive Studio
